# aplicaciones-internet-examen-flask-uab

./: .env.example  .gitignore  README.md  config.py  env.sh  pyproject.toml  run.py
container/: .env  docker-compose.yml  init-user-db.sh
docs/: prototype.excalidraw
metrics_monitor_app/: config.py
src/app/: __init__.py  ia_integration.py  socket_client.py  views.py
src/app/models/: __init__.py  alert_configuration.py  alert_history.py  base_model.py  metric.py  metric_history.py  server.py
src/app/services/: metric_service.py  server_service.py
src/app/templates/: reports.html
