[project]
name = "examen-flask-uab"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "flask-appbuilder>=5.2.1",
    "flask-sqlalchemy>=3.1.1",
    "markdown>=3.10.2",
    "pymysql>=1.1.3",
    "python-socketio[asyncio-client]>=5.16.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "websocket-client>=1.9.0",
]
